--- a/css/styles.css
+++ b/css/styles.css
@@ -39,6 +39,7 @@ html{
     --border-work:#EEEEEE;
     --border-header:#ECECEC;
     --bg-hero:#c4c4c4;
+    --color-icon:#afb1b8;
 }
 
 body{
@@ -108,6 +109,7 @@ body{
     list-style: none;
     margin: 0;
     margin-left: auto;
+    align-items: center;
 
 }
 
@@ -130,33 +132,30 @@ body{
     color: var(--accent-color);
 }
 
+.site-cont .icon{
+    margin-right: 10px;
+ 
+}
+
+.site-cont .mail{
+    width: 16px;
+    height: 12px;
+    fill: currentColor;
+    margin-right: 10px;
+}
+.site-cont .phone {
+    width: 10px;
+    height: 16px;
+    fill:currentColor;
+}
+
+
 .nav-header{
     display: flex;
     align-items: center;
 }
 
-.site-cont .mail::before{
-    content: "";
-    width: 16px;
-    height: 12px;
-    background-image: url(../images/mail.png);
-    margin-right:10px;
-}
 
-.site-cont .mail:hover::before{
-   background-image: url(../images/mailhover.png);
-}
-
-.site-cont .phone::before {
-    content: "";
-    width: 10px;
-    height: 16px;
-    background-image: url(../images/phone.png);
-    margin-right: 10px;
-}
-
-.site-cont .phone:hover::before {
-    background-image: url(../images/phonehover.png);
 }
 
 /* навигация конец */
@@ -168,14 +167,24 @@ body{
     border-radius: 4px;
     padding: 6px 22px;
     display: inline-block;
-    min-width: 73px;
     border:1px solid transparent ;
 }
 
 .button.secondr{
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 
+    Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 
+    'Helvetica Neue', sans-serif;
+    font-size: 16px;
+    font-weight: 700;
+    letter-spacing: 0.06em;
     background-color: var(--accent-color);
+    color:var(--white);
     padding: 10px 32px;
     min-width: 200px;
+    cursor: pointer;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border: 1px solid transparent;
 }
 
 .button.secondary {
@@ -318,6 +327,36 @@ body{
 
 /* section our team */
 
+.list-icon{
+    width: 206px;
+    height: 44px;
+    display: flex;
+    padding: 0;
+    list-style: none;
+    justify-content: space-between;
+    margin: 0 auto;
+    align-items: center;
+    margin-top: 16px;
+    fill: var(--color-icon);
+}
+
+.list-icon .icon{
+    width: 44px;
+    height: 44px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    color: currentColor;
+}
+
+
+.list-icon .icon:hover,
+.list-icon .icon:focus{
+    background-color: var(--accent-color);
+    border-radius: 50%;
+    fill: var(--white);
+}
+
 .team{
     display: flex;
     list-style: none;
@@ -328,6 +367,12 @@ body{
 
 .team .item{
     text-align: center;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+     0px 1px 1px rgba(0, 0, 0, 0.14), 
+     0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+    padding-bottom: 30px;
+    
 }
 
 .team .title{
@@ -351,29 +396,7 @@ body{
     padding: 0;
 }
 
-.team .link{
-    display: block;
-    text-align: center;
-    padding-bottom: 30px;
-   
-}
 
-.team .icon{
-    width: 206px;
-    height: 44px;
-    background-image: url(..//images/instagram\ 2.png),
-    url(../images/twitter\ 1.png),url(..//images/facebook\ 1.png),
-    url(..//images/linkedin\ 1.png);
-    margin: 0 auto;
-    margin-top: 16px;
-    background-repeat: no-repeat;
-    background-position: left,
-        top 13px left 63px,
-        top 13px right 63px,
-        right;
-   
-    
-}
 
 
 /* section our comand end */
@@ -398,6 +421,9 @@ body{
     font-size: 16px;
     line-height: 1.73;
     padding: 6px 22px;
+    border-radius: 4px;
+    border: 1px solid transparent;
+    cursor: pointer;
 }
 
 .filter .item +.item{
@@ -491,6 +517,7 @@ body{
     padding-bottom: 94px;
     padding-left: 15px;
     padding-right: 15px;
+  
 
 }
 
@@ -499,6 +526,129 @@ body{
 }
 
 
+
+/* clines */
+
+.clines {
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.title-clines{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 42px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    margin-bottom: 50px;
+}
+   .clines .item{
+    width: 170px;
+    height: 92px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid var(--color-icon);
+    border-radius: 4px;
+    fill: var(--color-icon);  
+}
+
+.clines .item:hover{
+    fill: var(--accent-color);
+    border: 1px solid var(--accent-color);
+
+}
+
+.footer{
+   background-color: #2F303A;
+   color: var();
+    
+}
+
+.adress{
+    display: flex;
+    padding: 60px 15px;
+}
+
+.contact-footer{
+    margin-right: 70px;
+}
+
+.contact-footer .link{
+    font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 24px;
+        /* or 171% */
+        letter-spacing: 0.03em;
+        color: rgba(255, 255, 255, 0.6);
+}
+
+.contact-footer li{
+    font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 24px;
+        /* or 171% */
+        letter-spacing: 0.03em;
+        color: #FFFFFF;
+}
+
+.logo-footer{
+    display: inline-block;
+    color: var(--white);
+    font-family: 'Raleway', 'sans-serif';
+    letter-spacing: 0.03em;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 2;
+    text-decoration: none;
+    margin-bottom: 20px;
+}
+
+.logo-footer .logo-web{
+   color: var(--accent-color);
+}
+
+.join{
+    font-family: 'Roboto';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 16px;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+        margin-top: 12px;
+        color: #FFFFFF;
+}
+
+
+.social { 
+    margin-top: 20px;
+    fill:var(--white);
+}
+
+.social .icon {
+    color: currentColor;
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 50%;
+}
+
+
+.list-icon .icon:hover,
+.list-icon .icon:focus {
+    background-color: var(--accent-color);
+    border-radius: 50%;
+    fill: var(--white);
+}
 
 
 
