--- a/css/styles.css
+++ b/css/styles.css
@@ -107,8 +107,7 @@ body{
 .site-cont{
     display: flex;
     list-style: none;
-    margin: 0;
-    margin-left: auto;
+    margin: 0 auto;
     align-items: center;
 
 }
@@ -170,7 +169,7 @@ body{
     border:1px solid transparent ;
 }
 
-.button.secondr{
+.button.order{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 
     Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 
     'Helvetica Neue', sans-serif;
@@ -205,7 +204,7 @@ body{
 
 /* section hero open */ 
 
-.overlo{
+.bg-hero{
     text-align: center;
     height: 600px;
     background-color: var(--bg-hero);
@@ -490,7 +489,7 @@ body{
    
 }
 
-.work-filter .disription {
+.work-filter .desription {
     /* margin: 0 24px 20px 24px; */
     margin: 0;
     padding: 0;
@@ -527,15 +526,15 @@ body{
 
 
 
-/* clines */
+/* clients */
 
-.clines {
+.clients {
     display: flex;
     justify-content: space-between;
 
 }
 
-.title-clines{
+.title-clients{
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
@@ -548,7 +547,7 @@ body{
     padding: 0;
     margin-bottom: 50px;
 }
-   .clines .item{
+   .clients .item{
     width: 170px;
     height: 92px;
     display: inline-flex;
@@ -559,7 +558,7 @@ body{
     fill: var(--color-icon);  
 }
 
-.clines .item:hover{
+.clients .item:hover{
     fill: var(--accent-color);
     border: 1px solid var(--accent-color);
 
